Frequently Asked Questions done here!

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,40 @@
 /* costom css */
+
+/* 
+<div class="left-side col-sm-12 col-md-6 col-12">
+
+<img  class="rounded-3" src="./images/confarence4.jpg" style="width: 500px;" alt="confarence">
+
+</div>
+
+<div class="right-side col-sm-12 col-md-6 col-12  pe-5">
+
+<h1>Community & Conference Centre</h1>
+<p class="text-muted">
+Set in a peaceful location just outside Ipswich and easily accessible from the A12 and A14 routes, our superbly maintained venue offers a choice of function rooms to suit all budgets. The beautiful gardens and extensive outdoor sports facilities offer so much more than your usual community venue, providing something quite unique for the local community and surrounding areas to enjoy.
+</p>
+
+</div> */
+
+
+
+/* <section class="container-fluid  d-flex  align-items-center mx-3 my-5">
+<div class="left-side d-flex col-md-6 col-12 flex-row">
+
+    <img class="rounded-3 " src="./images/confarence4.jpg" alt="confarence">
+
+</div>
+
+<div class="right-side col-md-6 col-12  pe-5">
+
+    <h1>Community & Conference Centre</h1>
+    <p class="text-muted">
+        Set in a peaceful location just outside Ipswich and easily accessible from the A12 and A14 routes, our
+        superbly maintained venue offers a choice of function rooms to suit all budgets. The beautiful gardens
+        and extensive outdoor sports facilities offer so much more than your usual community venue, providing
+        something quite unique for the local community and surrounding areas to enjoy.
+    </p>
+
+</div>
+
+</section> */
